--- a/articleAssets/storiesfromothers/helplines/page1.html
+++ b/articleAssets/storiesfromothers/helplines/page1.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <h1>Attachment Style</h1>
+  <h1>Helplines Page 1</h1>
   <p>Test</p>
 </body>
 </html>
