feat: add all remaining files for currently completed articles
Signed-off-by: oscitate <ephie8654@outlook.com>

--- a/articleAssets/aboutmentalhealth/adhd/page12.html
+++ b/articleAssets/aboutmentalhealth/adhd/page12.html
@@ -15,10 +15,10 @@
 			<img style="width: 5%;" src="../../assets/articleAssets/aboutmentalhealth/adhd/page12-image1.png">
 			<p style="align-self: center">5 mins video:</p>
 		</div>
-		<a href="https://www.youtube.com/watch?v=5l2RIOhDXvU" style="color: lightskyblue">https://www.youtube.com/watch?v=5l2RIOhDXvU</a>
+		<a href="https://www.youtube.com/watch?v=5l2RIOhDXvU" style="color: #765000">https://www.youtube.com/watch?v=5l2RIOhDXvU</a>
 		
 		<p>
-			<a href="internal:///meditation/meditation/" style="color: lightskyblue">Activity – Mindful Pause (Breath-Work)</a>
+			<a href="internal:///meditation/meditation/" style="color: #765000">Activity – Mindful Pause (Breath-Work)</a>
 		</p>
 	</div>
 </body>
