--- a/articleAssets/aboutmentalhealth/bipolar/page1.html
+++ b/articleAssets/aboutmentalhealth/bipolar/page1.html
@@ -5,13 +5,12 @@
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body style="font-size: 120%">
+<body>
   <h2>TL:DR</h2>
-  <p style="font-style: italic;">Date of post: 27 Jul 24</p>
+  <p style="font-style: italic;">Date of post: 6 May 24</p>
 
-	<p>
-		When we experience intense emotions, it can be difficult to make sense of them or even express them in words for others to understand or help us. While we are not defined by the emotions we feel, they do affect our life in various ways.  Being emotionally aware redirects our focus from just feeling it to identifying what we can do about it. 
-		Let’s use this feeling wheel developed by Dr Gloria Wilcox to explore, identify, express and regulate our emotions. Improve our emotional intelligence through reflecting and accepting our emotional experience.
-	</p>
+	<p>Bipolar disorder (formerly called manic-depressive illness or manic depression) can cause unusual swings in a person's mood, energy level, and concentration. Transiting through the various period of high energy (maniac episodes) and low energy (depressive episodes) can be disruptive to their well-being, in turn affect their day-to-day activities as well as their relationship with others. </p>
+	
+	<p>While there is no direct cure for bipolar, the symptoms can be effectively managed through long term and continuous treatment such as combination of medication and psychotherapy.</p>
 </body>
 </html>
