--- a/articleAssets/aboutmentalhealth/bipolar/page10.html
+++ b/articleAssets/aboutmentalhealth/bipolar/page10.html
@@ -6,21 +6,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+	<b>
+		If you have or believe you have Bipolar Disorder and it is severely impacting your life, do seek professional help as soon you can! :) Remember given the right treatment, these problems can be managed to help you go through your NS life smoothly and improve your overall mental well-being/ functioning in the future!
+	</b>
+
 	<h2>YOU MAY BE INTERESTED IN THESE TOO:</h2>
 
-	<div style="display: flex">
-		<div style="display: flex; flex-direction: column; flex: 1">
-			<a href="internal:///thisarticle?category=aboutmentalhealth&title=Depression&id=" style="color: lightskyblue">About Mental Health – Depression</a><br>
-			<a href="internal:///thisarticle?category=aboutmentalhealth&title=Anxiety&id=" style="color: lightskyblue">About Mental Health – Anxiety</a><br>
-			<a href="internal:///thisarticle?category=selfcare&title=Anger Management&id=" style="color: lightskyblue">About Self-Care – Anger Management</a><br>
-			<a href="internal:///meditation/meditation" style="color: lightskyblue">About Self-Care – Mindful Pauses</a><br>
-		</div>
-		<div style="display: flex; flex-direction: column; flex: 1">
-			<p>Watch a video:</p>
-			<a href="https://youtu.be/gAMbkJk6gnE">
-				<img src="../../assets/articleAssets/understandingyourself/identifytameemotions/page10-image1.png">
-			</a>
-		</div>
+	<div style="display: flex; flex-direction: column; flex: 1">
+		<a href="internal:///thisarticle?category=aboutmentalhealth&title=Depression&id=" style="color: #765000">About Mental Health – Depression</a><br>
+		<a href="internal:///thisarticle?category=understandingyourself&title=Identify & Tame Your Emotions&id=4" style="color: #765000">Understanding Yourself – Identify & Tame Your Emotion</a><br>
+		<a href="internal:///thisarticle?category=understandingyourself&title=Distress Signs&id=6" style="color: #765000">Understanding Yourself – Distress Signs</a><br>
+		<a href="internal:///thisarticle?category=storiesfromothers&title=Helplines&id=12" style="color: #765000">Others – Helplines</a><br>
 	</div>
 </body>
 </html>
