--- a/articleAssets/aboutmentalhealth/bipolar/page2.html
+++ b/articleAssets/aboutmentalhealth/bipolar/page2.html
@@ -6,14 +6,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<div style="display: flex">
-		<div style="flex: 6">
-			<h2>WHAT IS IT</h2>
+	<h2>WHAT IS IT</h2>
 
-			<p>Do you know that there are more than 20 distinct emotions that a person can experience, not to mention the various combinations of emotions that can occur in just a single episode.</p>
-			<p>It is no wonder that it can be challenging to navigate our emotions and at times get lost in them. Especially when we experience intense emotions that cloud our mind, in turn activates our “fight-flight-freeze-fawn” stress response.</p>
-		</div> 
-		<img style="flex: 1" width="35%" src="../../assets/articleAssets/understandingyourself/identifytameemotions/page2-image1.png">
+	<p>Bipolar disorder is characterised by extreme mood swings from being very happy and energetic (maniac episode) to very sad and demotivated (depressive episode).</p>
+
+	<p>In 2019, approximately 1 in 150 adults (40 million people, or 0.53% of the global population) were living with bipolar disorder. While the prevalence of bipolar disorder among men and women is approximately equal, available data indicate that women are more often diagnosed.</p>
+
+	<div style="display: flex">
+		<p style="flex: 3">The exact cause of bipolar is yet known, but can be triggered by extreme stress, genetic or chemical influence or life-changing events. It can occur to anyone at any point in time.</p>
+		<img style="flex: 2; width: 25%" src="../../assets/articleAssets/aboutmentalhealth/bipolar/page2-image1.png">
 	</div>
 </body>
 </html>
