--- a/articleAssets/aboutmentalhealth/bipolar/page3.html
+++ b/articleAssets/aboutmentalhealth/bipolar/page3.html
@@ -6,61 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<p>Emotions can influence our actions in 5 main ways:</p>
-	<br>
-	<div style="display: flex; flex-direction: column;">
-		<div style="display: flex; flex-direction: row; width: 100%; border-top: 2px solid green">
-			<div style="flex: 1; text-align: center;">
-				<p><b>Subjective Feeling</b></p>
-			</div>
-			<div style="flex: 1; text-align: center;">
-				<p><b>Action Tendency Component</b></p>
-			</div>
-			<div style="flex: 1; text-align: center;">
-				<p><b>Appraisal Component</b></p>
-			</div>
-			<div style="flex: 1; text-align: center;">
-				<p><b>Motor Component</b></p>
-			</div>
-			<div style="flex: 1; text-align: center;">
-				<p><b>Physiological Component</b></p>
-			</div>
-		</div>
-		<div style="display: flex; flex-direction: row; width: 100%; border-top: 2px solid green; background-color:  #cff1c2;">
-			<div style="flex: 1; text-align: center;">
-				<p>The experience of feeling and recognising the emotion</p>
-			</div>
-			<div style="flex: 1; text-align: center;">
-				<p>Relevant action in response to the emotion</p>
-			</div>
-			<div style="flex: 1; text-align: center;">
-				<p>Learning the triggers and tracking how it affects us. Helps us communicate to others</p>
-			</div>
-			<div style="flex: 1; text-align: center;">
-				<p>Physically expressing the emotions</p>
-			</div>
-			<div style="flex: 1; text-align: center;">
-				<p>Biological reaction for the emotion</p>
-			</div>
-		</div>
-		<div style="display: flex; flex-direction: row; width: 100%;">
-			<div style="flex: 1; text-align: center;">
-				<p>I am afraid</p>
-			</div>
-			<div style="flex: 1; text-align: center;">
-				<p>I don't want to be here</p>
-			</div>
-			<div style="flex: 1; text-align: center;">
-				<p>I am not prepared</p>
-				<p>I don’t have enough time</p>
-			</div>
-			<div style="flex: 1; text-align: center;">
-				<p>Observable signs: frowning, worried face, restlessness</p>
-			</div>
-			<div style="flex: 1; text-align: center;">
-				<p>I feel jittery</p>
-			</div>
-		</div>
+	<div style="display: flex; background-color: black; color: white; flex-direction: column; align-items: center;">
+		<p style="flex: 1">There are four types of Bipolar Disorder</p>
 	</div>
+
+	<br><br>
+
+	<img style="width: 100%" src="../../assets/articleAssets/aboutmentalhealth/bipolar/page3-image1.png">
 </body>
 </html>
