--- a/articleAssets/aboutmentalhealth/bipolar/page4.html
+++ b/articleAssets/aboutmentalhealth/bipolar/page4.html
@@ -5,13 +5,42 @@
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+<style>
+	table, th, td {
+		border: 1px solid black;
+		border-collapse: collapse;
+	}
+
+	th, td {
+		padding: 3px;
+	}
+</style>
 <body>
-  <div style="display: flex; gap: 20px">
-		<img style="flex: 1" width="25%" src="../../assets/articleAssets/understandingyourself/identifytameemotions/page4-image1.png">
-		<div style="flex: 6; display: flex; flex-direction: column;">
-			<p>We all possess the above 5 components, but the intensity and expression of the same emotion can differ among individual, depending on their upbringing, past experiences and ability to manage the emotions.</p>
-			<p>Being able to identify emotions is a skill needed to improve our emotional intelligence. This helps us communicate in detail our emotional experiences so we can identify what to do to regulate our emotions more effectively</p>
-		</div>
-	</div>
+	<table>
+		<tr>
+			<td>
+				<b>Bipolar 1 Disorder</b>
+			</td>
+			<td>Short manic episodes, or severe manic symptoms that needs immediate hospital care. Depressive episodes usually occur for a period of time as well.</td>
+		</tr>
+		<tr>
+			<td>
+				<b>Bipolar II Disorder</b>
+			</td>
+			<td>Defined by a pattern of depressive episodes and hypomanic episodes, but without the full-blown manic symptoms.</td>
+		</tr>
+		<tr>
+			<td>
+				<b>Cyclothymic Disorder (also called Cyclothymia)</b>
+			</td>
+			<td>Defined by numerous periods of hypomanic symptoms and depressive symptoms lasting for a period of time. However, the symptoms do not meet the diagnostic requirements for a hypomanic episode and a depressive episode to be classified as above.</td>
+		</tr>
+		<tr>
+			<td>
+				<b>Others</b>
+			</td>
+			<td>Defined by Bipolar Disorder symptoms that do not match the three categories listed above</td>
+		</tr>
+	</table>
 </body>
 </html>
