--- a/articleAssets/aboutmentalhealth/bipolar/page5.html
+++ b/articleAssets/aboutmentalhealth/bipolar/page5.html
@@ -6,13 +6,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<div style="display: flex">
-		<div style="flex: 3">
-			<h2>WHAT'S NEXT</h2>
-			
-			<p>We can use Dr Floria Willcox (1982)’s Feeling Wheel as a starting point to identify our emotions.</p>
-		</div>
-		<img style="flex: 2" width="20%" src="../../assets/articleAssets/understandingyourself/identifytameemotions/page5-image1.png">
-	</div>
+	<h2>SYMPTOMS</h2>
+
+	<p>
+		Maniac episode
+		<ul>
+			<li>More agitation, irritation, or "touchy"</li>
+			<br>
+			<li>Engage in risky and impulsive behaviours, such as spending a lot of money or reckless driving</li>
+			<li>Make grand and unrealistic plans</li>
+			<li>Show poor judgment and decision making</li>
+			<br>
+			<li>Feel very “high,” or elated</li>
+			<li>Talk really fast about a lot of different things</li>
+			<li>Have a lot of energy and increased activity level</li>
+		</ul>
+	</p>
 </body>
 </html>
