--- a/articleAssets/aboutmentalhealth/bipolar/page6.html
+++ b/articleAssets/aboutmentalhealth/bipolar/page6.html
@@ -6,13 +6,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<div style="display: flex">
-		<div style="flex: 3">
-			<h2>Step 1:</h2>
-			
-			<p>Start from the inner centre circle of the Feeling Wheel and identify the general emotions e.g., Fearful</p>
-		</div>
-		<img style="flex: 2" width="20%" src="../../assets/articleAssets/understandingyourself/identifytameemotions/page5-image1.png">
-	</div>
+	<h2>SYMPTOMS</h2>
+
+	<p>
+		Depressive episode
+		<ul>
+			<li>Feel irritable</li>
+			<li>Feel like they can't enjoy things they once liked</li>
+			<li>Feel very sad, worthless or hopeless</li>
+			<li>Have thoughts about death or suicide</li>
+			<br>
+			<li>Feel tired or “slowed down”</li>
+			<li>Have decreased activity levels</li>
+			<li>Have trouble concentrating</li>
+			<li>Have trouble sleeping, or sleep too much</li>
+		</ul>
+	</p>
 </body>
 </html>
