--- a/articleAssets/aboutmentalhealth/bipolar/page8.html
+++ b/articleAssets/aboutmentalhealth/bipolar/page8.html
@@ -6,21 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<div style="display: flex">
-		<img style="flex: 2" width="40%" src="../../assets/articleAssets/understandingyourself/identifytameemotions/page8-image1.png">
-		<div style="flex: 14">
-			<h2>Step 3:</h2>
-			<p>Accept the feeling and reflect on what is causing it</p>
-			<br>
-			<h2>Step 4:</h2>
-			<p>Recall past experiences with the same feeling and ask yourself</p>
-			<ol type="a">
-				<li>how did you manage it then</li>
-				<li>what works/ didn’t work as well</li>
-				<li>can you do that now/ what else can you do differently</li>
-				<li>what are the support that I have now for help</li>
-			</ol>
-		</div>
-	</div>
+	<h2>TREATMENT</h2>
+
+	<p>Medicine is an essential part of the treatment plan but depending on the severity and characteristics shown by the individual, a mixture of psychotherapy or psychosocial intervention can be implemented to balance the side-effects, functioning needs and effectiveness.</p>
 </body>
 </html>
