--- a/articleAssets/aboutmentalhealth/whatispsychotherapy/page1.html
+++ b/articleAssets/aboutmentalhealth/whatispsychotherapy/page1.html
@@ -5,13 +5,12 @@
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body style="font-size: 120%">
+<body>
   <h2>TL:DR</h2>
-  <p style="font-style: italic;">Date of post: 27 Jul 24</p>
+  <p style="font-style: italic;">Date of post: 24 Sep 24</p>
 
-	<p>
-		When we experience intense emotions, it can be difficult to make sense of them or even express them in words for others to understand or help us. While we are not defined by the emotions we feel, they do affect our life in various ways.  Being emotionally aware redirects our focus from just feeling it to identifying what we can do about it. 
-		Let’s use this feeling wheel developed by Dr Gloria Wilcox to explore, identify, express and regulate our emotions. Improve our emotional intelligence through reflecting and accepting our emotional experience.
-	</p>
+	<p>Psychotherapy, also known as “talking therapy”, is one of the treatment options that can help us understand how we feel, think and behave in distressing situation, in turn learn how to develop better coping skills to improve our life.</p>
+
+	<p>There are many types of psychotherapy that can be used to treat various mental health conditions, depending on the problem, our abilities and preference. As it is a collaborative treatment mode, we would have to share personal and sensitive information so we can accurately define our difficulties. As such, it is important to understand how psychotherapy works and find the right type to suit our needs.</p>
 </body>
 </html>
