--- a/articleAssets/aboutmentalhealth/whatispsychotherapy/page10.html
+++ b/articleAssets/aboutmentalhealth/whatispsychotherapy/page10.html
@@ -5,22 +5,47 @@
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
-	<h2>YOU MAY BE INTERESTED IN THESE TOO:</h2>
+<style>
+	th, td {
+		padding: 5px;
+	}
 
-	<div style="display: flex">
-		<div style="display: flex; flex-direction: column; flex: 1">
-			<a href="internal:///thisarticle?category=aboutmentalhealth&title=Depression&id=" style="color: lightskyblue">About Mental Health – Depression</a><br>
-			<a href="internal:///thisarticle?category=aboutmentalhealth&title=Anxiety&id=" style="color: lightskyblue">About Mental Health – Anxiety</a><br>
-			<a href="internal:///thisarticle?category=selfcare&title=Anger Management&id=" style="color: lightskyblue">About Self-Care – Anger Management</a><br>
-			<a href="internal:///meditation/meditation" style="color: lightskyblue">About Self-Care – Mindful Pauses</a><br>
-		</div>
-		<div style="display: flex; flex-direction: column; flex: 1">
-			<p>Watch a video:</p>
-			<a href="https://youtu.be/gAMbkJk6gnE">
-				<img src="../../assets/articleAssets/understandingyourself/identifytameemotions/page10-image1.png">
-			</a>
-		</div>
-	</div>
+	td {
+		vertical-align: top;
+	}
+</style>
+<body>
+	<h3>SOME TYPES OF THERAPY</h3>
+
+	<table style="width: 100%">
+		<tr>
+			<th style="width: 15%; background-color: #FDFFAF;">
+				<b>Therapy</b>
+			</th>
+			<th style="width: 35%; background-color: #FFE8DA;">
+				<b>What is it</b>
+			</th>
+			<th style="width: 50%; background-color: #BEF7BA;">
+				<b>Where can it be used for</b>
+			</th>	
+		</tr>
+		<tr>
+			<td>
+				Interpersonal Therapy (IPT)
+			</td>
+			<td>
+				Good for treating symptoms associated with significant loss, major life changes or interpersonal conflict
+				<br><br>
+				Helps develop social skills to reduce the distress from  interpersonal relationships
+			</td>
+			<td>
+				Grief therapy to help process the loss of a significant loved one
+				<br><br>
+				Role dispute to address the lack of reciprocity in your relationships
+				<br><br>
+				Interpersonal deficits arising from mood disorders such as PTSD, bipolar or borderline personality disorder
+			</td>
+		</tr>
+	</table>
 </body>
 </html>
