--- a/articleAssets/aboutmentalhealth/whatispsychotherapy/page11.html
+++ b/articleAssets/aboutmentalhealth/whatispsychotherapy/page11.html
@@ -31,17 +31,15 @@
 		</tr>
 		<tr>
 			<td>
-				Cognitive Behavioural Therapy (CBT)
+				Psychoanalytic/ Psychodynamic Therapy
 			</td>
 			<td>
-				Aims to identify unhelpful thought patterns and beliefs that causes problem.
+				Originated from Sigmund Freud’s theory of mind
 				<br><br>
-				Focuses on solving current challenges but does not go deep into past experiences
+				Focuses on uncovering unconscious thoughts that could be linked to unresolved childhood experiences that impact on your life
 			</td>
 			<td>
-				Develop new problem-solving skills to overcome maladaptive coping strategies like addiction
-				<br><br>
-				Journalling and self-monitoring skills to manage anxiety or anger
+				Can be used for conditions like chronic depression, anxiety, somatic disorder, PTSD or substance use disorders
 			</td>
 		</tr>
 	</table>
