--- a/articleAssets/aboutmentalhealth/whatispsychotherapy/page2.html
+++ b/articleAssets/aboutmentalhealth/whatispsychotherapy/page2.html
@@ -6,14 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<div style="display: flex">
-		<div style="flex: 6">
-			<h2>WHAT IS IT</h2>
+	<h2>WHAT IS IT</h2>
 
-			<p>Do you know that there are more than 20 distinct emotions that a person can experience, not to mention the various combinations of emotions that can occur in just a single episode.</p>
-			<p>It is no wonder that it can be challenging to navigate our emotions and at times get lost in them. Especially when we experience intense emotions that cloud our mind, in turn activates our “fight-flight-freeze-fawn” stress response.</p>
-		</div> 
-		<img style="flex: 1" width="35%" src="../../assets/articleAssets/understandingyourself/identifytameemotions/page2-image1.png">
-	</div>
+	<p>Psychotherapy, or talk therapy, is a form of intervention that can help us understand our thoughts, feeling and behaviour towards a certain situation/person so we are able to change that distress to better cope with the challenges, improve our life and build resilience.</p>
+
+	<p>Typically, the process will be guided by a trained mental health provider. Various psychotherapy techniques and strategies can be used, depending on the problem faced, desired outcome, our ability and preference. Regardless of the chosen psychotherapy, a therapeutic relationship must be built so we can communicate openly and safely about our problems to explore solution.</p>
+
+	<p>However, it can still be very scary to open up to a stranger, and many may be reluctant to try it out. Finding a trusted professional and learning about how it works can help us make the most out of it.</p>
 </body>
 </html>
