--- a/articleAssets/aboutmentalhealth/whatispsychotherapy/page3.html
+++ b/articleAssets/aboutmentalhealth/whatispsychotherapy/page3.html
@@ -6,60 +6,33 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<p>Emotions can influence our actions in 5 main ways:</p>
+	<div style="display: flex;">
+		<div style="flex: 8; background-color: #BADBF7; border-width: 1px; border-radius: 20px; padding: 10px">
+			<b>When do we need therapy?</b>
+			<br><br>
+			We may benefit from having therapy if 
+			
+			<ul>
+				<li>The sense of helplessness is overwhelming and for a prolonged period</li>
+				<li>Nothing we have tried till date seems to work</li>
+				<li>It is affecting our daily activities, and we cease to function</li>
+				<li>Our action or words are hurting ourselves or others</li>
+				<li>We want to develop specific personal skills</li>
+			</ul>	
+		</div>
+		<div style="flex: 1"></div>
+	</div>
+
 	<br>
-	<div style="display: flex; flex-direction: column;">
-		<div style="display: flex; flex-direction: row; width: 100%; border-top: 2px solid green">
-			<div style="flex: 1; text-align: center;">
-				<p><b>Subjective Feeling</b></p>
-			</div>
-			<div style="flex: 1; text-align: center;">
-				<p><b>Action Tendency Component</b></p>
-			</div>
-			<div style="flex: 1; text-align: center;">
-				<p><b>Appraisal Component</b></p>
-			</div>
-			<div style="flex: 1; text-align: center;">
-				<p><b>Motor Component</b></p>
-			</div>
-			<div style="flex: 1; text-align: center;">
-				<p><b>Physiological Component</b></p>
-			</div>
+
+	<div style="display: flex">
+		<div style="flex: 3">
+			<img style="width: 100%" src="../../assets/articleAssets/aboutmentalhealth/whatispsychotherapy/page3-image1.png">
 		</div>
-		<div style="display: flex; flex-direction: row; width: 100%; border-top: 2px solid green; background-color:  #cff1c2;">
-			<div style="flex: 1; text-align: center;">
-				<p>The experience of feeling and recognising the emotion</p>
-			</div>
-			<div style="flex: 1; text-align: center;">
-				<p>Relevant action in response to the emotion</p>
-			</div>
-			<div style="flex: 1; text-align: center;">
-				<p>Learning the triggers and tracking how it affects us. Helps us communicate to others</p>
-			</div>
-			<div style="flex: 1; text-align: center;">
-				<p>Physically expressing the emotions</p>
-			</div>
-			<div style="flex: 1; text-align: center;">
-				<p>Biological reaction for the emotion</p>
-			</div>
-		</div>
-		<div style="display: flex; flex-direction: row; width: 100%;">
-			<div style="flex: 1; text-align: center;">
-				<p>I am afraid</p>
-			</div>
-			<div style="flex: 1; text-align: center;">
-				<p>I don't want to be here</p>
-			</div>
-			<div style="flex: 1; text-align: center;">
-				<p>I am not prepared</p>
-				<p>I don’t have enough time</p>
-			</div>
-			<div style="flex: 1; text-align: center;">
-				<p>Observable signs: frowning, worried face, restlessness</p>
-			</div>
-			<div style="flex: 1; text-align: center;">
-				<p>I feel jittery</p>
-			</div>
+		<div style="flex: 5; background-color: #BEF7BA; border-width: 1px; border-radius: 20px; padding: 10px">
+			<b>Is therapy for life?</b>
+			<br><br>
+			No, it really depends on the severity of the problem and progress made during the session. Remember, therapy is always collaborative, so be an active participant and work with your therapist.
 		</div>
 	</div>
 </body>
