--- a/articleAssets/aboutmentalhealth/whatispsychotherapy/page6.html
+++ b/articleAssets/aboutmentalhealth/whatispsychotherapy/page6.html
@@ -5,14 +5,45 @@
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+<style>
+	th, td {
+		padding: 5px;
+	}
+
+	td {
+		vertical-align: top;
+	}
+</style>
 <body>
-	<div style="display: flex">
-		<div style="flex: 3">
-			<h2>Step 1:</h2>
-			
-			<p>Start from the inner centre circle of the Feeling Wheel and identify the general emotions e.g., Fearful</p>
-		</div>
-		<img style="flex: 2" width="20%" src="../../assets/articleAssets/understandingyourself/identifytameemotions/page5-image1.png">
-	</div>
+	<h3>SOME TYPES OF THERAPY</h3>
+
+	<table style="width: 100%">
+		<tr>
+			<th style="width: 15%; background-color: #FDFFAF;">
+				<b>Therapy</b>
+			</th>
+			<th style="width: 35%; background-color: #FFE8DA;">
+				<b>What is it</b>
+			</th>
+			<th style="width: 50%; background-color: #BEF7BA;">
+				<b>Where can it be used for</b>
+			</th>	
+		</tr>
+		<tr>
+			<td>
+				Behavioural Therapy
+			</td>
+			<td>
+				Suggests that new learning can fix a problem caused by previous learning
+				<br><br>
+				Uses conditioning and social learning to correct problematic behaviour or start a helpful behaviour
+			</td>
+			<td>
+				Exposure therapy to overcome fears of situations/ objects/ people
+				<br><br>
+				Aversion therapy to pair an undesirable behaviour with undesirable stimulus/outcome to deter the unwanted behaviour
+			</td>
+		</tr>
+	</table>
 </body>
 </html>
