--- a/articleAssets/aboutmentalhealth/whatispsychotherapy/page8.html
+++ b/articleAssets/aboutmentalhealth/whatispsychotherapy/page8.html
@@ -5,22 +5,43 @@
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+<style>
+	th, td {
+		padding: 5px;
+	}
+
+	td {
+		vertical-align: top;
+	}
+</style>
 <body>
-	<div style="display: flex">
-		<img style="flex: 2" width="40%" src="../../assets/articleAssets/understandingyourself/identifytameemotions/page8-image1.png">
-		<div style="flex: 14">
-			<h2>Step 3:</h2>
-			<p>Accept the feeling and reflect on what is causing it</p>
-			<br>
-			<h2>Step 4:</h2>
-			<p>Recall past experiences with the same feeling and ask yourself</p>
-			<ol type="a">
-				<li>how did you manage it then</li>
-				<li>what works/ didn’t work as well</li>
-				<li>can you do that now/ what else can you do differently</li>
-				<li>what are the support that I have now for help</li>
-			</ol>
-		</div>
-	</div>
+	<h3>SOME TYPES OF THERAPY</h3>
+
+	<table style="width: 100%">
+		<tr>
+			<th style="width: 15%; background-color: #FDFFAF;">
+				<b>Therapy</b>
+			</th>
+			<th style="width: 35%; background-color: #FFE8DA;">
+				<b>What is it</b>
+			</th>
+			<th style="width: 50%; background-color: #BEF7BA;">
+				<b>Where can it be used for</b>
+			</th>	
+		</tr>
+		<tr>
+			<td>
+				Dialectical Behavioural Therapy (DBT)
+			</td>
+			<td>
+				“Dialectical” refers to the situation where two opposites are true at the same time.
+				<br><br>
+				Balances acceptance and change by exploring contradictory or opposite perspective in different scenarios
+			</td>
+			<td>
+				Good for borderline personality disorder or those with very strong opinions i.e. help them identify specific distressing behaviour and develop alternative perspectives to modify behaviour.
+			</td>
+		</tr>
+	</table>
 </body>
 </html>
