--- a/articleAssets/aboutmentalhealth/whatispsychotherapy/page9.html
+++ b/articleAssets/aboutmentalhealth/whatispsychotherapy/page9.html
@@ -5,13 +5,41 @@
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+<style>
+	th, td {
+		padding: 5px;
+	}
+
+	td {
+		vertical-align: top;
+	}
+</style>
 <body>
-	<h2>Step 5:</h2>
+	<h3>SOME TYPES OF THERAPY</h3>
 
-	<p>Use your usual or new-found coping action to help you overcome the intense emotion!</p>
-
-	<p>It is not uncommon to experience a diverse combination of emotions simultaneously in a single event! Focus on what you can control allow for more specify actions that we can take. Remember, be it positive or negative emotions, they are all part of us and is needed to have a balanced life. We should not change all negative emotions into positive ones only!</p>
-
-	<img width="40%" src="../../assets/articleAssets/understandingyourself/identifytameemotions/page9-image1.png">
+	<table style="width: 100%">
+		<tr>
+			<th style="width: 15%; background-color: #FDFFAF;">
+				<b>Therapy</b>
+			</th>
+			<th style="width: 35%; background-color: #FFE8DA;">
+				<b>What is it</b>
+			</th>
+			<th style="width: 50%; background-color: #BEF7BA;">
+				<b>Where can it be used for</b>
+			</th>	
+		</tr>
+		<tr>
+			<td>
+				Humanistic Therapy
+			</td>
+			<td>
+				Person-focused approach that aims at helping the person to reach full potential by becoming more self-aware and accepting of the thoughts, emotions and behaviour.
+			</td>
+			<td>
+				Typically recommended for those with trauma, low self-esteem, mood issues or interpersonal difficulties
+			</td>
+		</tr>
+	</table>
 </body>
 </html>
