--- a/articleAssets/selfcare/mindfulpause/page9-old.html
+++ b/articleAssets/selfcare/mindfulpause/page9-old.html
@@ -6,10 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <div style="display: flex; flex-direction: column; gap: 10px">
-    <div style="display: flex; flex: 1; justify-content: center;">
-      <img style="flex: 1" src="../../assets/articleAssets/selfcare/mindfulpause/page9-image1.png" width="70%">
-    </div>
+  <div style="display: flex; flex-direction: row; gap: 10px">
+    <img style="flex: 1" src="../../assets/articleAssets/selfcare/mindfulpause/page9-image1.png" width="70%">
     <p style="flex: 1">Try creating your own Mindful Pause list.<br><br>Make it fun by turning it into a dart board or a spin wheel to select which mindful activity to embark for today!</p>
   </div>    
 </body>
