--- a/articleAssets/selfcare/sleepqualitychecklist/page4.html
+++ b/articleAssets/selfcare/sleepqualitychecklist/page4.html
@@ -7,12 +7,12 @@
 </head>
 <body>
   <h2>YOU MAY BE INTERESTED IN THESE TOO:</h2>
-  <a href="internal:///thisarticle?category=selfcare&title=Understanding Sleep&id=1" style="color: lightskyblue">About Self-Care – Understanding Sleep</a>
+  <a href="internal:///thisarticle?category=selfcare&title=Understanding Sleep&id=1" style="color: #765000">About Self-Care – Understanding Sleep</a>
   <br><br>
-  <a href="internal:///thisarticle?category=understandingyourself&title=Identify & Tame Your Emotions&id=4" style="color: lightskyblue">Understanding Yourself – Identify & Tame Your Emotion</a>
+  <a href="internal:///thisarticle?category=understandingyourself&title=Identify & Tame Your Emotions&id=4" style="color: #765000">Understanding Yourself – Identify & Tame Your Emotion</a>
 	<br><br>
-  <a href="internal:///meditation/meditation" style="color: lightskyblue">Activity – Mindful Pause (Breath-Work)</a>
+  <a href="internal:///meditation/meditation" style="color: #765000">Activity – Mindful Pause (Breath-Work)</a>
 	<br><br>
-  <a href="internal:///thisarticle?category=selfcare&title=Understanding Sleep&id=1" style="color: lightskyblue">Activity – Sleep Diary</a>
+  <a href="internal:///thisarticle?category=selfcare&title=Understanding Sleep&id=1" style="color: #765000">Activity – Sleep Diary</a>
 </body>
 </html>
