--- a/articleAssets/storiesfromothers/helplines/page1.html
+++ b/articleAssets/storiesfromothers/helplines/page1.html
@@ -6,7 +6,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <h1>Helplines Page 1</h1>
-  <p>Test</p>
+  <h2>FOR EMERGENCIES</h2>
+
+	<p><i>For life and death situation where there’s <b>immediate risk</b>, e.g., someone attempting suicide/ self-harming/ being abused at this moment</i></p>
+
+	<br>
+
+	<p>SCDF Ambulance</p>
+	<a href="tel:995" style="text-decoration: none;">995 · 24 Hours</a>
+
+	<br><br>
+
+	<p>Singapore Police Force</p>
+	<a href="tel:999" style="text-decoration: none;">999 · 24 Hours</a>
 </body>
 </html>
