--- a/articleAssets/storiesfromothers/helplines/page11.html
+++ b/articleAssets/storiesfromothers/helplines/page11.html
@@ -10,9 +10,9 @@
 
 	<p><i>To find out more on specific issues or support group.</i></p>
 
-	<h3>AUTISM (ASD)</h3>
+	<h3>Gambling</h3>
 
-	<p>Austism Resource Centre</p>
-	<a href="https://www.autism.org.sg/about-us/contact-us" style="text-decoration: none;">https://www.autism.org.sg/about-us/contact-us</a>
+	<p>National Council on Problem Gambling</p>
+	<a href="tel:18006668668" style="text-decoration: none;">1800 6 668 668 · Daily 8am-11pm</a>
 </body>
 </html>
