--- a/articleAssets/storiesfromothers/helplines/page2.html
+++ b/articleAssets/storiesfromothers/helplines/page2.html
@@ -6,7 +6,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <h1>Helplines Page 2</h1>
-  <p>Test</p>
+  <h2>FOR IMMEDIATE ADVICE</h2>
+
+	<p><i>24hrs service for <b>immediate advice</b> on how managing a mental breakdown for you or your loved one</i></p>
+
+	<br>
+
+	<p>SAF Counselling Center (for in-service servicemen only)</p>
+	<a href="tel:18002780022" style="text-decoration: none;">1800 278 0022 · 24 Hours</a>
+
+	<br><br>
+
+	<p>Singapore Association of Mental Health Helpline</p>
+	<a href="tel:18002837019" style="text-decoration: none;">1800 283 7019 · 24 Hours</a>
 </body>
 </html>
