--- a/articleAssets/storiesfromothers/helplines/page3.html
+++ b/articleAssets/storiesfromothers/helplines/page3.html
@@ -6,7 +6,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <h1>Helplines</h1>
-  <p>Test</p>
+  <h2>FOR IMMEDIATE ADVICE</h2>
+
+	<p><i>24hrs service for <b>immediate advice</b> on how managing a mental breakdown for you or your loved one</i></p>
+
+	<br>
+
+	<p>Institute of Mental Health</p>
+	<a href="tel:63892222" style="text-decoration: none;">6389 2222 · 24 Hours</a>
+
+	<br><br>
+
+	<p>Samaritans of Singapore CareText (Whatsapp)</p>
+	<a href="https://wa.me/+6591511767" style="text-decoration: none;">9151 1767 · 24 Hours</a>
 </body>
 </html>
