--- a/articleAssets/storiesfromothers/helplines/page4.html
+++ b/articleAssets/storiesfromothers/helplines/page4.html
@@ -6,7 +6,23 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <h1>Helplines</h1>
-  <p>Test</p>
+  <h2>FOR RESOURCES</h2>
+
+	<p><i>To find out more on specific issues or support group.</i></p>
+
+	<h3>General Well-being</h3>
+
+	<p>National Care Helpline</p>
+	<a href="tel:18002026868" style="text-decoration: none;">1800 202 6868 · Daily 8am-12am</a>
+
+	<br><br>
+
+	<p>Silver Ribbon Singapore</p>
+	<a href="tel:63853714" style="text-decoration: none;">6385 3714 · Weekdays 9am-5pm</a>
+
+	<br><br>
+
+	<p>Singapore Police Forces</p>
+	<a href="tel:18002551151" style="text-decoration: none;">1800 255 1151 · Weekdays 8.30am-6.30pm</a>
 </body>
 </html>
