--- a/articleAssets/storiesfromothers/helplines/page5.html
+++ b/articleAssets/storiesfromothers/helplines/page5.html
@@ -6,7 +6,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <h1>Helplines</h1>
-  <p>Test</p>
+  <h2>CONTACTS FOR RESOURCES</h2>
+
+	<p><i>To find out more on specific issues or support group.</i></p>
+
+	<h3>ADDICTION</h3>
+
+	<p>National Addictions Management Service (NAMS)</p>
+	<a href="tel:67326837" style="text-decoration: none;">6732 6837</a>
 </body>
 </html>
