--- a/articleAssets/understandingyourself/attachmentstyle/page13.html
+++ b/articleAssets/understandingyourself/attachmentstyle/page13.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <h2>YOU MAY BE INTERESTED IN THESE TOO:</h2>
-  <a href="internal:///thisarticle?category=understandingyourself&title=Know Your Personality Type&id=3" style="color: lightskyblue">Understanding Yourself – Know Your Personality Type</a>
+  <a href="internal:///thisarticle?category=understandingyourself&title=Know Your Personality Type&id=3" style="color: #765000">Understanding Yourself – Know Your Personality Type</a>
   <br><br>
-  <a href="internal:///thisarticle?category=understandingyourself&title=Introvert or Extrovert&id=" style="color: lightskyblue">Understanding Yourself – Introvert or Extrovert</a>
+  <a href="internal:///thisarticle?category=understandingyourself&title=Introvert or Extrovert&id=" style="color: #765000">Understanding Yourself – Introvert or Extrovert</a>
 </body>
 </html>
