--- a/articleAssets/understandingyourself/distresssigns/page9.html
+++ b/articleAssets/understandingyourself/distresssigns/page9.html
@@ -14,7 +14,7 @@
 
 			<p><b>Try this Perceived Stress Scale survey to get a sensing (PSS-14):</b></p>
 			
-			<a href="https://www.psytoolkit.org/cgi-bin/3.4.4/survey?s=hWZu8" style="color: lightskyblue;">https://www.psytoolkit.org/cgi-bin/3.4.4/survey?s=hWZu8</a>
+			<a href="https://www.psytoolkit.org/cgi-bin/3.4.4/survey?s=hWZu8" style="color: #765000;">https://www.psytoolkit.org/cgi-bin/3.4.4/survey?s=hWZu8</a>
 
 			<p>However, do note that this is not a diagnostic tool. It serves as a guide to highlight if you are having high perceived stress (> 27).</p>
 
