--- a/articleAssets/understandingyourself/knowyourpersonalitytype/page8.html
+++ b/articleAssets/understandingyourself/knowyourpersonalitytype/page8.html
@@ -10,15 +10,15 @@
 
 	<div style="display: flex; flex-direction: column;">
 		<div style="display: flex; flex-direction: column; flex: 1">
-			<a href="internal:///thisarticle?category=understandingyourself&title=What is Attachment Style&id=5" style="color: lightskyblue">Understanding Yourself - Attachment Style</a><br>
-			<a href="internal:///thisarticle?category=understandingyourself&title=Introvert or Extrovert&id=" style="color: lightskyblue">Understanding Yourself - Introvert or Extrovert</a><br>
+			<a href="internal:///thisarticle?category=understandingyourself&title=What is Attachment Style&id=5" style="color: #765000">Understanding Yourself - Attachment Style</a><br>
+			<a href="internal:///thisarticle?category=understandingyourself&title=Introvert or Extrovert&id=" style="color: #765000">Understanding Yourself - Introvert or Extrovert</a><br>
 		</div>
 		<div>
 			<h2>Try these personality tests:</h2>
 			<p>
-				<a href="https://www.truity.com/test/big-five-personality-test" style="color: lightskyblue">https://www.truity.com/test/big-five-personality-test</a>
+				<a href="https://www.truity.com/test/big-five-personality-test" style="color: #765000">https://www.truity.com/test/big-five-personality-test</a>
 				<br><br>
-				<a href="https://www.16personalities.com/free-personality-test" style="color: lightskyblue">https://www.16personalities.com/free-personality-test</a>
+				<a href="https://www.16personalities.com/free-personality-test" style="color: #765000">https://www.16personalities.com/free-personality-test</a>
 			</p>
 		</div>
 	</div>
