--- a/articleAssets/aboutmentalhealth/asd/page1.html
+++ b/articleAssets/aboutmentalhealth/asd/page1.html
@@ -5,7 +5,7 @@
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body style="font-size: 120%">
+<body>
   <h2>TL:DR</h2>
   <p style="font-style: italic;">Date of post: 14 Apr 24</p>
 
