--- a/articleAssets/aboutmentalhealth/whatispsychotherapy/page4.html
+++ b/articleAssets/aboutmentalhealth/whatispsychotherapy/page4.html
@@ -6,11 +6,27 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <div style="display: flex; gap: 20px">
-		<img style="flex: 1" width="25%" src="../../assets/articleAssets/understandingyourself/identifytameemotions/page4-image1.png">
-		<div style="flex: 6; display: flex; flex-direction: column;">
-			<p>We all possess the above 5 components, but the intensity and expression of the same emotion can differ among individual, depending on their upbringing, past experiences and ability to manage the emotions.</p>
-			<p>Being able to identify emotions is a skill needed to improve our emotional intelligence. This helps us communicate in detail our emotional experiences so we can identify what to do to regulate our emotions more effectively</p>
+  <div style="display: flex">
+		<div style="flex: 1"></div>
+		<div style="flex: 6; background-color: #f3baf7; border-width: 1px; border-radius: 20px; padding: 10px">
+			<b>Which type of therapy should it be?</b>
+			<br><br>
+			This depends on the needs and desired outcome. Far beyond the media portrayal of a person lying on a couch during therapy,  therapy session can be individual, couple, family or even in group settings. There are also many techniques and approaches  a mental health practitioner can utilise.  Each comes with its pros and cons.
+			<br><br>
+			Studies have found that a person took an average of 2.5 therapists to find a good match. So be patient.
+		</div>
+	</div>
+
+	<br>
+
+	<div style="display: flex; gap: 10px">
+		<div style="flex: 5; background-color: #FDFFAF; border-width: 1px; border-radius: 20px; padding: 10px;">
+			<b>How long is a therapy session?</b>
+			<br><br>
+			It can last about 40-120 mins, and may take place once a month or a few times a month as discussed between us and our therapists.
+		</div>
+		<div style="flex: 3">
+			<img style="width: 100%" src="../../assets/articleAssets/aboutmentalhealth/whatispsychotherapy/page4-image1.png">
 		</div>
 	</div>
 </body>
