--- a/articleAssets/aboutmentalhealth/whatispsychotherapy/page5.html
+++ b/articleAssets/aboutmentalhealth/whatispsychotherapy/page5.html
@@ -7,12 +7,16 @@
 </head>
 <body>
 	<div style="display: flex">
-		<div style="flex: 3">
-			<h2>WHAT'S NEXT</h2>
-			
-			<p>We can use Dr Floria Willcox (1982)’s Feeling Wheel as a starting point to identify our emotions.</p>
+		<div style="flex: 5; background-color: #FFE8DA; border-width: 1px; border-radius: 20px; padding: 10px;">
+			<b>What usually happens in the session?</b>
+			<br><br>
+			First few sessions are typically to get to know you, your past experiences and struggles. This is so the therapist can learn about your personal life journey thus far and how that could have shaped you as a person or contribute to your current challenge. This is also the time for you to clarify your doubts on how the session will be like with your therapist.
+			<br><br>
+			A therapy/counselling goal is then discussed and set to guide subsequent sessions. It is important that the goals are clear and measurable to track effectiveness of the session.
 		</div>
-		<img style="flex: 2" width="20%" src="../../assets/articleAssets/understandingyourself/identifytameemotions/page5-image1.png">
+		<div style="display: flex; flex: 1; flex-direction: column; justify-content: flex-end;">
+			<img style="width: 100%" src="../../assets/articleAssets/aboutmentalhealth/whatispsychotherapy/page5-image1.png">
+		</div>
 	</div>
 </body>
 </html>
