--- a/articleAssets/selfcare/mindfulpause/page10.html
+++ b/articleAssets/selfcare/mindfulpause/page10.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <h2>YOU MAY BE INTERESTED IN THESE TOO:</h2>
-  <a href="internal:///thisarticle?category=understandingyourself&title=Identify & Tame Your Emotions&id=4" style="color: lightskyblue">Understanding Yourself – Identify & Tame Your Emotion</a>
+  <a href="internal:///thisarticle?category=understandingyourself&title=Identify & Tame Your Emotions&id=4" style="color: #765000">Understanding Yourself – Identify & Tame Your Emotion</a>
   <br><br>
-  <a href="internal:///meditation/meditation" style="color: lightskyblue">Activity – Mindful Pause (Breath-Work)</a>
+  <a href="internal:///meditation/meditation" style="color: #765000">Activity – Mindful Pause (Breath-Work)</a>
 </body>
 </html>
