--- a/articleAssets/understandingyourself/distresssigns/page10.html
+++ b/articleAssets/understandingyourself/distresssigns/page10.html
@@ -7,14 +7,14 @@
 </head>
 <body>
   <h2>YOU MAY BE INTERESTED IN THESE TOO:</h2>
-  <a href="internal:///thisarticle?category=understandingyourself&title=Introvert or Extrovert&id=" style="color: lightskyblue">Understanding Yourself – Introvert or Extrovert</a>
+  <a href="internal:///thisarticle?category=understandingyourself&title=Introvert or Extrovert&id=" style="color: #765000">Understanding Yourself – Introvert or Extrovert</a>
   <br><br>
-  <a href="internal:///thisarticle?category=understandingyourself&title=What is Attachment Style&id=5" style="color: lightskyblue">Understanding Yourself – Attachment Styles</a>
+  <a href="internal:///thisarticle?category=understandingyourself&title=What is Attachment Style&id=5" style="color: #765000">Understanding Yourself – Attachment Styles</a>
 	<br><br>
-	<a href="internal:///thisarticle?category=understandingyourself&title=Eustress&id=7" style="color: lightskyblue">Understanding Yourself – Eustress</a>
+	<a href="internal:///thisarticle?category=understandingyourself&title=Eustress&id=7" style="color: #765000">Understanding Yourself – Eustress</a>
 	<br><br>
-	<a href="internal:///thisarticle?category=selfcare&title=ABC Model&id=" style="color: lightskyblue">About Self-Care – ABC Model</a>
+	<a href="internal:///thisarticle?category=selfcare&title=ABC Model&id=" style="color: #765000">About Self-Care – ABC Model</a>
 	<br><br>
-	<a href="internal:///meditation/meditation" style="color: lightskyblue">Activity – Mindful Pause</a>
+	<a href="internal:///meditation/meditation" style="color: #765000">Activity – Mindful Pause</a>
 </body>
 </html>
