--- a/articleAssets/understandingyourself/eustress/page11.html
+++ b/articleAssets/understandingyourself/eustress/page11.html
@@ -13,7 +13,7 @@
 		<p style="white-space: nowrap;">
 			<b>Watch this video to</b>
 			<br>
-			<a href="https://youtu.be/RcGyVTAoXEUhttps://youtu.be/RcGyVTAoXEU" style="color: lightskyblue">https://youtu.be/RcGyVTAoXEUhttps://youtu.be/RcGyVTAoXEU</a>
+			<a href="https://youtu.be/RcGyVTAoXEUhttps://youtu.be/RcGyVTAoXEU" style="color: #765000">https://youtu.be/RcGyVTAoXEUhttps://youtu.be/RcGyVTAoXEU</a>
 		</p>
 		
 		<p>Reach out to a professional if you are lost about what to do or unable to handle your stress!</p>
