--- a/articleAssets/understandingyourself/identifytameemotions/page10.html
+++ b/articleAssets/understandingyourself/identifytameemotions/page10.html
@@ -10,10 +10,10 @@
 
 	<div style="display: flex">
 		<div style="display: flex; flex-direction: column; flex: 1">
-			<a href="internal:///thisarticle?category=aboutmentalhealth&title=Depression&id=" style="color: lightskyblue">About Mental Health – Depression</a><br>
-			<a href="internal:///thisarticle?category=aboutmentalhealth&title=Anxiety&id=" style="color: lightskyblue">About Mental Health – Anxiety</a><br>
-			<a href="internal:///thisarticle?category=selfcare&title=Anger Management&id=" style="color: lightskyblue">About Self-Care – Anger Management</a><br>
-			<a href="internal:///meditation/meditation" style="color: lightskyblue">About Self-Care – Mindful Pauses</a><br>
+			<a href="internal:///thisarticle?category=aboutmentalhealth&title=Depression&id=" style="color: #765000">About Mental Health – Depression</a><br>
+			<a href="internal:///thisarticle?category=aboutmentalhealth&title=Anxiety&id=" style="color: #765000">About Mental Health – Anxiety</a><br>
+			<a href="internal:///thisarticle?category=selfcare&title=Anger Management&id=" style="color: #765000">About Self-Care – Anger Management</a><br>
+			<a href="internal:///meditation/meditation" style="color: #765000">About Self-Care – Mindful Pauses</a><br>
 		</div>
 		<div style="display: flex; flex-direction: column; flex: 1">
 			<p>Watch a video:</p>
